adding UniqueElement Result for autocompletion
